tests/core/snapshots/execution_spec__core__json_to_config_spec__boolean.json.snap
---
source: tests/core/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  f1: Boolean @http(path: "/user/12/online")
}
