tests/core/snapshots/execution_spec__core__json_to_config_spec__empty_list.json.snap
---
source: tests/core/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

scalar Any

type Query {
  any: [Any] @http(path: "/users")
}
