tests/core/snapshots/execution_spec__core__json_to_config_spec__incompatible_properties.json.snap
---
source: tests/core/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

scalar Any

type Query {
  t1: T1 @http(path: "/")
}

type T1 {
  campaignTemplates: Any
  colors: [Any]
}
