tests/core/snapshots/execution_spec__core__json_to_config_spec__nested_list.json.snap
---
source: tests/core/json_to_config_spec.rs
expression: config.to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  f1(children: Boolean!): T3 @http(path: "/users", query: [{key: "children", value: "{{.args.children}}"}])
}

type T1 {
  age: Int
  name: String
}

type T2 {
  age: Int
  children: [T1]
  name: String
}

type T3 {
  people: [T2]
}
